--- a/src/CashFlow.Test/CashFlow.Test.csproj
+++ b/src/CashFlow.Test/CashFlow.Test.csproj
@@ -19,10 +19,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\CashFlow.Data\CashFlow.Data.csproj" />
     <ProjectReference Include="..\CashFlow.Application\CashFlow.Application.csproj" />
     <ProjectReference Include="..\CashFlow.Configuration\CashFlow.Configuration.csproj" />
     <ProjectReference Include="..\CashFlow.Crosscutting\CashFlow.Crosscutting.csproj" />
+    <ProjectReference Include="..\CashFlow.Data\CashFlow.Data.csproj" />
     <ProjectReference Include="..\CashFlow.Domain\CashFlow.Domain.csproj" />
     <ProjectReference Include="..\CashFlow.WebAPI\CashFlow.WebAPI.csproj" />
   </ItemGroup>
